solved overflow issue

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,7 +2,7 @@ img {
   user-select: none;
 }
 
-body {
+html, body {
   overflow-x: hidden;
 }
 
@@ -843,14 +843,14 @@ input:focus {
   }
 
   .contactNowButton {
-    color: black;
-    height: 30px;
+    color: white;
+    height: 40px;
     border-radius: 40px;
     padding-left: 15px;
     padding-right: 15px;
     margin-top: 30px;
     font-size: 15px;
-    background-color: transparent;
+    background-color: #fc6404;
     border: 3px solid #fc6404;
     font-weight: 600;
   }
